syntax = "proto3";

package RPCSync;

service PingService {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

enum State {
    Run = 0;
    Sleep = 1;
}

message PingRequest {
}

message PingResponse {
}
